New 2 project types are introduced.

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>My Projects</h1>
+  <h2>Web Development Projects</h2>
   <div class="projects-container">
     <div class="project-card">
       <img src="images/google98.png" alt="Google 98 image">
@@ -21,6 +22,16 @@
       <h2>My Portfolio</h2>
       <p>My web development portfolio to show my front-end skills. In this portfolio I used HTML, CSS, JavaScript.</p>
       <a href="https://github.com/Tugba-Ceren/Ceren-sPortfolio" target="_blank">View on GitHub</a>
+    </div>
+    <div class="project-card" id="MachineLearning">
+      <h2>Machine Learning Projects</h2>
+      <p>Coming Soon...</p>
+
+    </div>
+    <div class="project-card" id="CyberSecurity">
+      <h2>Cyber Security Projects</h2>
+      <p>Coming Soon...</p>
+
     </div>
   </div>
 </body>
